chore: start of dev wiring

--- a/apps/electron/tsconfig.json
+++ b/apps/electron/tsconfig.json
@@ -1,4 +1,17 @@
 {
     "extends": "tsconfig/base.json",
-    "include": ["src/**/*.ts", "src/**/*.tsx"]
+    "include": ["src/**/*.ts", "src/**/*.tsx"],
+    "compilerOptions": {
+        "module": "commonjs",
+        "removeComments": true,
+        "emitDecoratorMetadata": true,
+        "experimentalDecorators": true,
+        "allowSyntheticDefaultImports": true,
+        "sourceMap": true,
+        "outDir": "./dist",
+        "baseUrl": "./",
+        "incremental": true,
+        "noImplicitAny": true,
+        "noFallthroughCasesInSwitch": true
+    }
 }
