--- a/apps/electron/package.json
+++ b/apps/electron/package.json
@@ -3,12 +3,16 @@
     "private": "true",
     "version": "6.0.0",
     "license": "GPL-3.0",
+    "main": "./dist/main.js",
     "scripts": {
+        "build": "tsc",
+        "dev": "node ./scripts/watch.js",
         "lint": "eslint --fix --ext .ts,.tsx src/**"
     },
     "devDependencies": {
         "electron": "^23.0.0",
         "eslint-config-custom": "*",
+        "tsc-watch": "^6.0.0",
         "tsconfig": "*"
     },
     "dependencies": {
