chore: use monorepo deps for tailwind-config

--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -22,6 +22,7 @@
     "prettier-plugin-tailwind": "^2.2.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tailwind-config": "*",
     "tailwindcss": "^3.2.6",
     "tsconfig": "*"
   }
