--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -9,7 +9,7 @@
     "allowSyntheticDefaultImports": true,
     "sourceMap": true,
     "outDir": "./dist",
-    "baseUrl": "./",
+    "baseUrl": "./src/",
     "incremental": true,
     "noImplicitAny": true,
     "noFallthroughCasesInSwitch": true
