--- a/apps/electron/package.json
+++ b/apps/electron/package.json
@@ -1,6 +1,6 @@
 {
     "name": "firebot",
-    "private": "true",
+    "private": true,
     "version": "6.0.0",
     "license": "GPL-3.0",
     "main": "./dist/index.js",
