--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "firebot-frontend",
-  "private": "true",
+  "name": "frontend",
+  "private": true,
   "version": "6.0.0",
   "license": "GPL-3.0",
   "scripts": {
