--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,6 +1,6 @@
 {
     "name": "firebot-types",
-    "private": "true",
+    "private": true,
     "version": "6.0.0",
     "license": "GPL-3.0",
     "devDependencies": {
