--- a/apps/electron/package.json
+++ b/apps/electron/package.json
@@ -14,7 +14,8 @@
         "electron": "^23.0.0",
         "eslint-config-custom": "*",
         "tsc-watch": "^6.0.0",
-        "tsconfig": "*"
+        "tsconfig": "*",
+        "assets": "*"
     },
     "dependencies": {
         "backend": "*"
