--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "volta": {
         "node": "18.12.1",
         "npm": "8.19.2"
+    },
+    "scripts": {
+        "dev": "turbo dev"
     }
 }
