Implement nav bar

--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -26,6 +26,8 @@
   "dependencies": {
     "@headlessui/react": "^1.7.11",
     "@heroicons/react": "^2.0.15",
+    "@mdi/js": "^7.1.96",
+    "@mdi/react": "^1.6.1",
     "@next/font": "13.1.6",
     "assets": "*",
     "clsx": "^1.2.1",
