--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -19,6 +19,7 @@
     "postcss": "^8.4.21",
     "prettier-plugin-tailwind": "^2.2.12",
     "tailwind-config": "*",
+    "tailwind-scrollbar": "^2.1.0",
     "tailwindcss": "^3.2.6",
     "tailwindcss-themer": "^2.0.3",
     "tsconfig": "*"
