--- a/package.json
+++ b/package.json
@@ -50,10 +50,10 @@
   "dependencies": {
     "@aws-sdk/client-polly": "^3.26.0",
     "@crowbartools/firebot-custom-scripts-types": "^5.53.2-6",
-    "@twurple/api": "^6.0.0-pre.8",
-    "@twurple/auth": "^6.0.0-pre.8",
-    "@twurple/chat": "^6.0.0-pre.8",
-    "@twurple/pubsub": "^6.0.0-pre.8",
+    "@twurple/api": "^6.0.0",
+    "@twurple/auth": "^6.0.0",
+    "@twurple/chat": "^6.0.0",
+    "@twurple/pubsub": "^6.0.0",
     "@zunderscore/elgato-light-control": "^1.1.2",
     "angular": "^1.8.0",
     "angular-animate": "^1.7.8",
