feat: start on pre-compile script for electron

--- a/apps/electron/package.json
+++ b/apps/electron/package.json
@@ -8,7 +8,8 @@
     "scripts": {
         "build": "tsc",
         "dev": "node ./scripts/watch.js",
-        "lint": "eslint --fix --ext .ts,.tsx src/**"
+        "lint": "eslint --fix --ext .ts,.tsx src/**",
+        "precompile": "node ./scripts/pre-compile.js"
     },
     "devDependencies": {
         "electron": "^23.0.0",
