--- a/turbo.json
+++ b/turbo.json
@@ -10,6 +10,10 @@
         },
         "dev": {
             "cache": false
+        },
+        "compile": {
+            "dependsOn": ["build"],
+            "outputs": ["/build/"]
         }
     }
 }
