--- a/turbo.json
+++ b/turbo.json
@@ -11,7 +11,7 @@
         "dev": {
             "cache": false
         },
-        "compile": {
+        "precompile": {
             "dependsOn": ["build"],
             "outputs": ["/build/"]
         }
