--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "big-text.js": "^1.0.1",
     "body-parser": "^1.19.0",
     "carina": "^0.11.2",
+    "client-oauth2": "^4.3.3",
     "cm-resize": "^1.0.1",
     "codemirror": "^5.59.1",
     "color-convert": "^2.0.1",
