--- a/.github/workflows/compile-and-release.yml
+++ b/.github/workflows/compile-and-release.yml
@@ -106,7 +106,7 @@ jobs:
         run: |
           cd bundles/Windows
           mv FirebotV5Setup.exe firebot-v${{ needs.checkversion.outputs.version }}-setup.exe
-          mv Firebotv5-${{ needs.checkversion.outputs.version }}-full.nupkg firebot-v${{ needs.checkversion.outputs.version }}-full.nupkg
+          mv firebotv5-${{ needs.checkversion.outputs.version }}-full.nupkg firebot-v${{ needs.checkversion.outputs.version }}-full.nupkg
           cd ../Linux
           mv Firebot-linux-x64.tar.gz firebot-v${{ needs.checkversion.outputs.version }}-linux-x64.tar.gz
           cd ../macOS
