--- a/.github/workflows/compile-and-release.yml
+++ b/.github/workflows/compile-and-release.yml
@@ -34,6 +34,7 @@ jobs:
         run: git fetch --depth=1 origin +refs/tags/*:refs/tags/*
 
       - name: Get commit messages
+        id: commits
         run: echo commits=$(git log --pretty=format:'%s' $(git describe --tags `git rev-list --tags --max-count=1`)..HEAD) >> $GITHUB_OUTPUT
 
       - name: 'Check: package version has corrosponding git tag'
