fix(workflow): fix typo in RES variable

--- a/.github/workflows/compile-and-release.yml
+++ b/.github/workflows/compile-and-release.yml
@@ -37,7 +37,7 @@ jobs:
         id: commits
         run: |
           EOF=$(dd if=/dev/urandom bs=15 count=1 status=none | base64)
-          RES=$(git log --pretty=format:'%s' --branches=${GITHUB_REF##*/} $(git describe --tags `git rev-list --tags --max-count=1`)..HEAD >> $GITHUB_OUTPUT)
+          RES=$(git log --pretty=format:'%s' --branches=${GITHUB_REF##*/} $(git describe --tags `git rev-list --tags --max-count=1`)..HEAD)
           echo "commits<<${EOF}" >> $GITHUB_OUTPUT
           echo "${RES}" >> GITHUB_OUTPUT
           echo "${EOF}" >> $GITHUB_OUTPUT
