--- a/.github/workflows/compile-and-release.yml
+++ b/.github/workflows/compile-and-release.yml
@@ -114,14 +114,7 @@ jobs:
 
       - name: Rename Artifacts
         run: |
-          cd bundles/Windows
-          mv FirebotV5Setup.exe firebot-v${{ needs.checkversion.outputs.version }}-setup.exe
-          mv firebotv5-${{ needs.checkversion.outputs.version }}-full.nupkg firebot-v${{ needs.checkversion.outputs.version }}-full.nupkg
-          cd ../Linux
-          mv Firebot-linux-x64.tar.gz firebot-v${{ needs.checkversion.outputs.version }}-linux-x64.tar.gz
-          cd ../macOS
-          mv Firebot.dmg firebot-v${{ needs.checkversion.outputs.version }}-macos-x64.dmg
-          cd ..
+          mv ./bundles/Windows/firebot-${{ needs.checkversion.outputs.version }}-full.nupkg ./bundles/Windows/firebot-v${{ needs.checkversion.outputs.version }}-full.nupkg
 
       - name: Create Release
         uses: softprops/action-gh-release@v1
