dev(workflow): add debug line

--- a/.github/workflows/compile-and-release.yml
+++ b/.github/workflows/compile-and-release.yml
@@ -38,6 +38,7 @@ jobs:
         run: |
           EOF=$(dd if=/dev/urandom bs=15 count=1 status=none | base64)
           RES=$(git log --pretty=format:'%s' --branches=${GITHUB_REF##*/} $(git describe --tags `git rev-list --tags --max-count=1`)..HEAD)
+          echo ${RES//\r{0,1}\n/  __EOL__  /}
           echo "commits<<${EOF}" >> $GITHUB_OUTPUT
           echo "${RES}" >> $GITHUB_OUTPUT
           echo "${EOF}" >> $GITHUB_OUTPUT
